# CogniversPlatform

./: .env.example  .gitignore  .sops.yaml  Dockerfile.prod  README.md  docker-compose.yml  llm_prompt.txt  migration.sql  mypy.ini  package-lock.json  package.json  pyproject.toml  setup.py  test-interaction.json
.github/workflows/: scheduled-type-check.yml  type-check.yml
api/: Dockerfile.prod  README.md  __init__.py  alembic.ini  celery_app.py  database.py  dependencies.py  llm.py  main.py  mypy.ini  pyproject.toml  requirements.txt  schemas.py  setup.py  tasks.py
api/alembic/: README.md  env.py
api/auth/: __init__.py  dependencies.py  utils.py
api/core/: security.py
api/docs/: authentication.md
api/models/: __init__.py  address.py  base.py  interaction.py  processors.py  questionnaire.py  user.py
api/routers/: __init__.py  address.py  auth.py  interactions.py  processors.py  questionnaires.py  sessions.py  users.py
api/schemas/: common.py  processors.py  questionnaires.py
cognivers-frontend/: Dockerfile.prod  README.md  next.config.js  next.config.ts  package-lock.json  package.json  server.ts  tsconfig.json
cognivers-frontend/components/: AddressForm.tsx  Layout.tsx  NavigationLayout.tsx  PasswordField.tsx  ProcessorForm.tsx  ProfileUpdateForm.tsx  ProtectedRoute.tsx  SessionForm.tsx  SideNavigation.tsx  withAuth.tsx
scripts/: check_types.sh  file_scanner.sh  generate-keys.sh  setup-git-hooks.sh  verify_security.sh
terraform/: main.tf  variables.tf
test/: test_exclusions.sh
worker/: Dockerfile.prod  requirements.txt
(+113 files in other folders)
